--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Test directory
+test/
+
+# Assets
+champion_images
+champion_images_cropped
+
+.idea/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
